--- a/app/src/main/res/layout/activity_list_main.xml
+++ b/app/src/main/res/layout/activity_list_main.xml
@@ -28,7 +28,7 @@
 
         <FrameLayout
             android:id="@+id/container_list_main"
-            class="listafilmes.fragment.FilmesFragment"
+            class="listafilmes.fragment.MoviesFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
