--- a/app/src/main/res/layout/adapter_filmes_list.xml
+++ b/app/src/main/res/layout/adapter_filmes_list.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/trade_size_dp_3"
     android:layout_weight="1"
     android:foreground="?attr/selectableItemBackground"
-    android:minHeight="190dp"
     android:minWidth="135dp"
+    android:minHeight="190dp"
     app:cardCornerRadius="@dimen/trade_size_dp_4"
     app:cardElevation="@dimen/trade_size_dp_3"
-    card_view:cardElevation="@dimen/trade_size_dp_3">
+    tools:cardElevation="@dimen/trade_size_dp_3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +33,8 @@
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/imagem_filme"
                 android:cropToPadding="true"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                tools:src="@drawable/person" />
 
             <ProgressBar
                 android:id="@+id/progress_filmes_lista"
@@ -45,15 +46,19 @@
 
             <TextView
                 android:id="@+id/title_filmes_lista"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center"
                 android:layout_marginLeft="@dimen/trade_size_dp_6"
                 android:layout_marginRight="@dimen/trade_size_dp_6"
                 android:background="@color/black_transparente"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:lines="1"
                 android:textColor="@color/white"
                 android:textSize="@dimen/trade_txt_size_sp_16"
-                android:typeface="serif" />
+                android:typeface="serif"
+                tools:text="Nome do filme Nome do Filme Nome do Filme Nome do Filme" />
 
         </FrameLayout>
     </LinearLayout>
