--- a/app/src/main/res/layout/season_layout.xml
+++ b/app/src/main/res/layout/season_layout.xml
@@ -79,7 +79,7 @@
         <GridView
             android:id="@+id/container_stream"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:importantForAccessibility="no"
             android:focusable="false"
@@ -88,8 +88,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@id/image_temporada"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/date_temporada"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/date_temporada" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
