--- a/app/src/main/res/layout/poster_main.xml
+++ b/app/src/main/res/layout/poster_main.xml
@@ -7,8 +7,6 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:cropToPadding="true"
-    android:minWidth="45dp"
-    android:minHeight="110dp"
     android:scaleType="centerCrop"
     app:cardCornerRadius="3dp"
     app:cardElevation="3dp"
@@ -26,8 +24,8 @@
         android:adjustViewBounds="true"
         android:cropToPadding="true"
         android:minWidth="90dp"
-        android:scaleType="centerCrop"
-        tools:srcCompat="@drawable/person" />
+        android:scaleType="fitXY"
+        tools:srcCompat="@drawable/poster_empty" />
 
     <ProgressBar
         android:id="@+id/progress_poster_grid"
@@ -38,14 +36,14 @@
 
     <TextView
         android:id="@+id/title_main"
-        android:layout_width="@dimen/trade_size_dp_110"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="25dp"
         android:adjustViewBounds="true"
         android:background="@color/transparent2"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:maxLength="18"
         android:textAppearance="@style/AppIntroDefaultHeading"
         android:textSize="14sp"
         android:textStyle="bold"
